feat(README) Client setup tutorial
* Updated Readme.md with a tutorial